# HSE_SecDev

./: .dockerignore  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS
.github/workflows/: ci-p11-dast.yml  ci-p12-iac-container.yml  ci-sast-secrets.yml  ci-sbom-sca.yml  ci.yml
EVIDENCE/P09/: sbom.json  sca_report.json  sca_summary.md
EVIDENCE/P10/: sast_summary.md
EVIDENCE/P11/: dast_summary.md  zap_baseline.html  zap_baseline.json
EVIDENCE/P12/: checkov_report.json  hadolint_report.json  hardening_summary.md  trivy_report.json
app/: database.py  errors.py  exceptions.py  main.py  models.py  rest_api.py  security_files.py
docs/adr/: ADR-001-problem-details-and-correlation-id.md  ADR-002-request-size-limits.md  ADR-003-input-validation-items.md
docs/security-nfr/: NFR.md  NFR_BDD.md  NFR_TRACEABILITY.md
docs/threat-model/: DFD.md  RISKS.md  STRIDE.md
iac/: k8s-deployment.yaml
policy/: waivers.yml
security/: .gitleaks.toml  checkov.yaml  hadolint.yaml  trivy.yaml
security/semgrep/: rules.yml
tests/: test_errors.py  test_security_policies.py  test_upload.py  test_wishes.py
